--- a/jm-style.css
+++ b/jm-style.css
@@ -477,3 +477,7 @@ input[type="submit"].btn.btn-mini {
   color: #333333;
   text-decoration: none;
 }
+
+.btn:visited {
+  color: #FFF !important;
+}
