--- a/jm-style.css
+++ b/jm-style.css
@@ -494,8 +494,9 @@ div.quantity {
 }
 
 a.button.alt, button.button.alt, input.button.alt, #respond input#submit.alt, #content input.button.alt {
-
+  color: #FFF !important;
   font-size: 16px !important;
+  border: 2px solid !important
 }
 
 .actions .button, .actions input.button {
